@@ -4,15 +4,15 @@
 	<classpathentry kind="src" output="build/tests-classes" path="tests-src"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/grinder-xmlbeans.jar" sourcepath="D:/eclipse/The Grinder/build/xmlbeans/src"/>
-	<classpathentry kind="lib" path="lib/picocontainer-1.3.jar" sourcepath="/opt/picocontainer/picocontainer-1.3/picocontainer-1.3-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jsr173_1.0_api.jar"/>
 	<classpathentry kind="lib" path="lib/xbean.jar" sourcepath="/opt/xmlbeans/xmlbeans-2.1.0/xmlbeans-2.1.0-src.zip"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk160_11"/>
+	<classpathentry kind="lib" path="lib/picocontainer-2.13.6.jar" sourcepath="/opt/picocontainer/picocontainer-2.13.6/picocontainer-2.13.6-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ASM 3.2 - core"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ASM 3.2 - util"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jython 2.2.1"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jython 2.5.1"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jython 2.5.0"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk160_21"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
