@@ -27,7 +27,7 @@ xmlbeans.dir=/opt/xmlbeans/xmlbeans-2.1.0
 asm.dir=/opt/asm/asm-3.2
 
 # PicoContainer.
-picocontainer.dir=/opt/picocontainer/picocontainer-1.3
+picocontainer.dir=/opt/picocontainer/picocontainer-2.13.6
 
 # J2SE 5
 j2se5compiler.exe=/opt/bea-920/jdk150_04/bin/javac
